force-app/main/default/objects/RC_student__c/fields/alternate_phone__c.field-meta.xml
<CustomField>
    <fullName>alternate_phone__c</fullName>
    <label>Alternate Phone</label>
    <type>Phone</type>
</CustomField>