force-app/main/default/objects/RC_student__c/fields/AlternateContactNumber__c.field-meta.xml
<CustomField>
    <fullName>AlternateContactNumber__c</fullName>
    <description>Alternate Contact Number of the student</description>
    <label>AlternateContactNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>