force-app/main/default/objects/RC_student__c/fields/college_id__c.field-meta.xml
<CustomField>
    <fullName>college_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>college_id</label>
    <referenceTo>RC_college__c</referenceTo>
    <relationshipLabel>RC_students</relationshipLabel>
    <relationshipName>RC_students</relationshipName>
    <type>Lookup</type>
</CustomField>