force-app/main/default/objects/RC_student__c/fields/correspondence_address__c.field-meta.xml
<CustomField>
    <fullName>correspondence_address__c</fullName>
    <label>Correspondence Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>