force-app/main/default/objects/RC_student__c/fields/DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirth__c</fullName>
    <description>The date of Birth of the student</description>
    <label>DateOfBirth</label>
    <length>100</length>
    <type>Text</type>
</CustomField>