force-app/main/default/objects/RC_student__c/fields/diploma_marks__c.field-meta.xml
<CustomField>
    <fullName>diploma_marks__c</fullName>
    <label>Diploma Marks</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>