force-app/main/default/objects/RC_student__c/fields/DiplomaCourse__c.field-meta.xml
<CustomField>
    <fullName>DiplomaCourse__c</fullName>
    <description>Diploma course that the student has gone to</description>
    <label>Diploma Course</label>
    <length>100</length>
    <type>Text</type>
</CustomField>