force-app/main/default/objects/RC_student__c/fields/DiplomaSpecialization__c.field-meta.xml
<CustomField>
    <fullName>DiplomaSpecialization__c</fullName>
    <description>Specialization of the Diploma the student has undergone</description>
    <label>Diploma Specialization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>