force-app/main/default/objects/RC_student__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Gender of the Student</description>
    <label>Gender</label>
    <length>100</length>
    <type>Text</type>
</CustomField>