force-app/main/default/objects/RC_student__c/fields/hsc_specialization__c.field-meta.xml
<CustomField>
    <fullName>hsc_specialization__c</fullName>
    <description>High School Specialization the student has undergone</description>
    <label>High School Specialization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>