force-app/main/default/objects/RC_student__c/fields/hscCourse__c.field-meta.xml
<CustomField>
    <fullName>hscCourse__c</fullName>
    <description>High School course that the student as undergone</description>
    <label>High School Course</label>
    <length>100</length>
    <type>Text</type>
</CustomField>