force-app/main/default/objects/RC_student__c/fields/isHired__c.field-meta.xml
<CustomField>
    <fullName>isHired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hiring Status</label>
    <type>Checkbox</type>
</CustomField>