force-app/main/default/objects/RC_student__c/fields/marks_type__c.field-meta.xml
<CustomField>
    <fullName>marks_type__c</fullName>
    <label>Marks Type</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>