force-app/main/default/objects/RC_student__c/fields/MartialStatus__c.field-meta.xml
<CustomField>
    <fullName>MartialStatus__c</fullName>
    <description>Martial Status of the student</description>
    <label>MartialStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>