force-app/main/default/objects/RC_student__c/fields/NoOfDaysRequiredToJoin__c.field-meta.xml
<CustomField>
    <fullName>NoOfDaysRequiredToJoin__c</fullName>
    <description>No of days the student needs before he/she can join the company and work as an employee.</description>
    <label>No of Days Required To Join</label>
    <length>100</length>
    <type>Text</type>
</CustomField>