force-app/main/default/objects/RC_student__c/fields/permanent_address__c.field-meta.xml
<CustomField>
    <fullName>permanent_address__c</fullName>
    <label>Permanent Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>