force-app/main/default/objects/RC_student__c/fields/SecondarySchoolCourse__c.field-meta.xml
<CustomField>
    <fullName>SecondarySchoolCourse__c</fullName>
    <description>Secondary School course that the student has undergone</description>
    <label>Secondary School Course</label>
    <length>100</length>
    <type>Text</type>
</CustomField>