force-app/main/default/objects/RC_student__c/fields/SecondarySchoolSpecialization__c.field-meta.xml
<CustomField>
    <fullName>SecondarySchoolSpecialization__c</fullName>
    <description>The secondary School Specialization that the student has undergone</description>
    <label>Secondary School Specialization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>