force-app/main/default/objects/RC_student__c/fields/student_exp__c.field-meta.xml
<CustomField>
    <fullName>student_exp__c</fullName>
    <label>StudentExperience</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>