force-app/main/default/objects/RC_student__c/fields/student_image__c.field-meta.xml
<CustomField>
    <fullName>student_image__c</fullName>
    <label>Student Profile Image</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>